--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
-    <title>
-        YEA BITCH
-    </title>
+    <head>
+        <title>Home</title>
+    </head>
 
     <body>
         <h1>Hello world</h1>
-        <h3>Smt new</h3>
+        <a href="register.html">Register</a>
     </body>
 </html>
