--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 
     <body>
         <h1>Hello world</h1>
-        <a href="register.html">Register</a>
+        <a href="DUK.html">DUK</a><br>
+        <a href="register.html">Register form</a><br>
+        <a href="html5.html">HTML5</a><br>
+        <a href="css_lesson/css_index.html">CSS</a><br>
     </body>
 </html>
