--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <a href="register.html">Register form</a><br>
         <a href="html5.html">HTML5</a><br>
         <a href="css_lesson/css_index.html">CSS</a><br>
+        <a href="css-grid.html">CSS-GRID</a></br>
     </body>
 </html>
