--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <a href="html5.html">HTML5</a><br>
         <a href="css_lesson/css_index.html">CSS</a><br>
         <a href="css-grid.html">CSS-GRID</a></br>
+        <a href="lesson 100/index.html">LESSON 100</a>
     </body>
 </html>
