--- a/lesson 100/index.html
+++ b/lesson 100/index.html
@@ -5,26 +5,32 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-  <header>
-    <div class="zone green">Header</div>
-  </header>
-  
-  <div class="zone red">Cover</div>
+  <nav class="zone green sticky">
+    <ul class="main-nav">
+      <li><a href="#">About</a></li>
+      <li><a href="#">Products</a></li>
+      <li><a href="">Our Team</a></li>
+      <li class="push"><a href="">Contacts</a></li>
+    </ul>
+  </nav>
 
-  <div class="zone blue">
-    <img class="zone img" src="img/data_storage_2_2.png">
-    <img class="zone img" src="img/desktop_analytics_2.png">
-    <img class="zone img" src="img/files_2.png">
-    <img class="zone img" src="img/monitor_coding_2.png">
-    <img class="zone img" src="img/monitor_settings_2.png">
-    <img class="zone img" src="img/server_2_2.png">
-    <img class="zone img" src="img/server_3.png">
-    <img class="zone img" src="img/server_safe_2.png">
-    <!-- <img src="img/undraw.png"> -->
+  <div class="container zone">
+    <img class="cover" src="img/undraw.png">
   </div>
 
-  <footer>
-    <div class="zone yellow">Footer</div>
+  <div class="zone blue grid-wrapper">
+    <div class="box zone"><img src="img/data_storage_2_2.png"></div>
+    <div class="box zone"><img src="img/desktop_analytics_2.png"></div>
+    <div class="box zone"><img src="img/files_2.png"></div>
+    <div class="box zone"><img src="img/monitor_coding_2.png"></div>
+    <div class="box zone"><img src="img/monitor_settings_2.png"></div>
+    <div class="box zone"><img src="img/server_2_2.png"></div>
+    <div class="box zone"><img src="img/server_3.png"></div>
+    <div class="box zone"><img src="img/server_safe_2.png"></div>
+  </div>
+
+  <footer class="zone yellow">
+    FOOTER
   </footer>
 </body>
 </html>
