--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <a href="css_lesson/css_index.html">CSS</a><br>
         <a href="css-grid.html">CSS-GRID</a></br>
         <a href="lesson 100/index.html">LESSON 100</a>
+        <a href="js/first_script.html">JS Lesson 1</a>
     </body>
 </html>
