--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <a href="html5.html">HTML5</a><br>
         <a href="css_lesson/css_index.html">CSS</a><br>
         <a href="css-grid.html">CSS-GRID</a></br>
-        <a href="lesson 100/index.html">LESSON 100</a>
-        <a href="js/first_script.html">JS Lesson 1</a>
+        <a href="lesson 100/index.html">LESSON 100</a><br>
+        <a href="js/first_script.html">JS Lesson 1</a><br>
     </body>
 </html>
