--- a/js/first_script.html
+++ b/js/first_script.html
@@ -18,5 +18,8 @@
             Number(first) / Number(second);
         alert("The result of: " + first + move + second + "=" + result);
     </script>
+
+    <br><br>
+    <a href="../index.html">Back</a>
 </body>
 </html>
