--- a/lesson 100/index.html
+++ b/lesson 100/index.html
@@ -9,8 +9,8 @@
     <ul class="main-nav">
       <li><a href="#">About</a></li>
       <li><a href="#">Products</a></li>
-      <li><a href="">Our Team</a></li>
-      <li class="push"><a href="">Contacts</a></li>
+      <li><a href="#">Our Team</a></li>
+      <li class="push"><a href="../index.html">Contacts</a></li>
     </ul>
   </nav>
 
