--- a/js/second_script.html
+++ b/js/second_script.html
@@ -26,10 +26,11 @@
        }
        else if(age === 18){
             message = "Congratulations on your first year of driving. Enjoy the ride!";
+            alert(message);
        }else{
             message = "Powering On. Enjoy the ride!";
        }
-       alert(message);
+    //    alert(message);
     </script>
 
     <br><br>
