--- a/js/second_script.html
+++ b/js/second_script.html
@@ -11,7 +11,7 @@
        if(age < 18){
             message = "Sorry, you are too young to drive this car. Powering off";
        }
-       else if(age ===18){
+       else if(age ==18){
             message = "Congratulations on your first year of driving. Enjoy the ride!";
        }else{
             message = "Powering On. Enjoy the ride!";
