--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="css_lesson/css_index.html">CSS</a><br>
         <a href="css-grid.html">CSS-GRID</a></br>
         <a href="lesson 100/index.html">LESSON 100</a><br>
-        <a href="js/first_script.html">JS excercise 1</a><br>
-        <a href="js/second_script.html">JS excercise 2</a><br>
+        <a href="js-lessons/first_script.html">JS excercise 1</a><br>
+        <a href="js-lessons/second_script.html">JS excercise 2</a><br>
     </body>
 </html>
