JS: lists, array, loops, functions/objects END

--- a/js-lessons/functions.html
+++ b/js-lessons/functions.html
@@ -4,8 +4,19 @@
         <title>Scripts</title>
     </head>
     <body>
-        <h1>FUNCTIONS</h1>
+        <h1>FUNCTIONS, Excercise 5</h1>
+
+        <button onclick="exercise5()">Exercise5</button>
+        <button onclick="excercise6()">Excercise6</button>
+        <button onclick="excercise7()">Excercise7</button>
+        <button onclick="LessonLists()">Data Structures: Arrays</button>
+
+        <br><br>
+        <a href="../index.html">Back</a>
 
         <script type="text/javascript" src="js/functions.js"></script>
+        <script type="text/javascript" src="js/excercise5.js"></script>
+        <script type="text/javascript" src="js/excercise6.js"></script>
+        <script type="text/javascript" src="js/excercise7.js"></script>
     </body>
 </html>
