--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
         <a href="lesson 100/index.html">LESSON 100</a><br>
         <a href="js-lessons/first_script.html">JS excercise 1</a><br>
         <a href="js-lessons/second_script.html">JS excercise 2</a><br>
+        <a href="js-lessons/functions.html">Functions</a><br>
+        <a href="js-lessons/excerciseFacebook.html">Excercise Facebook</a><br>
     </body>
 </html>
