--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
         <a href="js-lessons/second_script.html">JS excercise 2</a><br>
         <a href="js-lessons/functions.html">Functions</a><br>
         <a href="js-lessons/excerciseFacebook.html">Excercise Facebook</a><br>
+        <a href="js-lessons/dom.html">DOM</a><br>
+        
     </body>
 </html>
