Background generator, gradient, MORE IN JS

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         <a href="js-lessons/functions.html">Functions</a><br>
         <a href="js-lessons/excerciseFacebook.html">Excercise Facebook</a><br>
         <a href="js-lessons/dom.html">DOM</a><br>
-        
+        <a href="gradient_background/gradient.html">Gradient Backgroud</a><br>
     </body>
 </html>
