--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
         <a href="js-lessons/excerciseFacebook.html">Excercise Facebook</a><br>
         <a href="js-lessons/dom.html">DOM</a><br>
         <a href="gradient_background/gradient.html">Gradient Backgroud</a><br>
+        <a href="advancedExcercise3.html">Advanced excercise 3</a><br>
     </body>
 </html>
