--- a/advancedExercise4.html
+++ b/advancedExercise4.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Advanced excercise 3</title>
+    <title>Advanced exercise 4</title>
 </head>
 <body>
 
 
     <button onclick="backHome()">Back home</button>
 
-    <script src="js-lessons/js/advancedExcercise3.js"></script>
+    <script src="js-lessons/js/advancedExercise4.js"></script>
 </body>
 </html>
