--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
         <a href="gradient_background/gradient.html">Gradient Backgroud</a><br>
         <a href="advancedExcercise3.html">Advanced exercise 3</a><br>
         <a href="advancedExercise4.html">Advanced exercise 4</a><br>
+        <a href="advanced_js.html">Advanced JS</a><br>
     </body>
 </html>
