--- a/advanced_js.html
+++ b/advanced_js.html
@@ -24,7 +24,7 @@
                 $("#code").text(data);
             });
         }
-        loadJSFileContent("file:///Users/maronas/Web_Course/advanced_js/1.js");
+        loadJSFileContent("advanced_js/1.js");
     </script>
 </body>
 </html>
