--- a/advanced_js.html
+++ b/advanced_js.html
@@ -2,29 +2,42 @@
 <html>
 <head>
     <title>Advanced JS</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
 <body>
     <h1>Advanced arrays</h1>
     <div>
         <pre>
             <code id="code">
-                <h1>
-                    WTF???
-                </h1>
+                const array = [1, 2, 10, 16];
+                const double = [];
+
+                //for each
+                const newArray = array.forEach(num => {
+                    double.push(num * 2);
+                });
+                console.log('forEach', double);
+
+                //map, filter, reduce
+                const mapArray = array.map(num => num * 2);
+                console.log('map', mapArray);
+
+                //filter
+                const filterArray = array.filter(num => num > 5);
+                console.log('filter', filterArray);
+
+                //back home button functionality
+                const backHome = () => location.href = "index.html";
+
+                //reduce
+                const reduceArray = array.reduce((accumulator, num) => {
+                    return accumulator + num
+                }, 0);
+                console.log('reduce', reduceArray);
             </code>
         </pre>
     </div>
 
     <button onclick="backHome()">Back home</button>
     <script src="advanced_js/1.js"></script>
-    <script>
-        function loadJSFileContent(filename) {
-            $.get(filename, function (data) {
-                $("#code").text(data);
-            });
-        }
-        loadJSFileContent("advanced_js/1.js");
-    </script>
 </body>
 </html>
