--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <h1>Hello world</h1>
         <a href="DUK.html">DUK</a><br>
+        <a href="exercises.html">Exercises</a><br>
         <a href="register.html">Register form</a><br>
         <a href="html5.html">HTML5</a><br>
         <a href="css_lesson/css_index.html">CSS</a><br>
