--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
         <a href="advancedExcercise3.html">Advanced exercise 3</a><br>
         <a href="advancedExercise4.html">Advanced exercise 4</a><br>
         <a href="advanced_js.html">Advanced JS</a><br>
+        <a href="theory.html">THEORY</a><br>
     </body>
 </html>
